[package]
name = "shoko-timer"
version = "1.0.0"
edition = "2024"
authors = ["shokoyoru"]
description = "A screen timer with json output for status bar"
license = "MIT"
repository = "https://codeberg.org/shokoieiri/shoko-screen-timer"
keywords = ["timer", "status-bar", "json", "waybar"]

[lib]
name = "shoko_screen_timer"
path = "src/lib.rs"

[dependencies]
